Fix file entry alignment

--- a/app/browse.css
+++ b/app/browse.css
@@ -21,6 +21,7 @@ main {
 
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
     gap: .5rem;
 }
 
